--- a/home.html
+++ b/home.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html>
-	<head>
-	    <title>Design Hosting App</title>
-	    <link rel="icon" href="images/favicon.png">
-	    <link rel="stylesheet" href="css/bootstrap.min.css">
-	    <link rel="stylesheet" href="css/styles.css">
-	</head>
-	<body>
-	    <div>
-	        <header>
-	            <div class="wrapper">
-	                <img src="images/qburst.png" alt="" width="100" height="50" />
-	                <h1>Design Hosting</h1>
-	            </div>
-	        </header>
-	        <main class="wrapper">
-	        </main>
-	    </div>
-	    <footer id="footer">
-	        <p>7th Floor, Ganga
-Phase III Campus, Technopark 
-Trivandrum - 695583</p>
-	    </footer>
-	</body>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
+
+<head>
+    <title>Design Hosting App</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.png">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+</head>
+
+<body>
+    <header>
+        <div class="wrapper">
+            <a href="http://www.qburst.com"><img src="images/qburst.png" alt="QBurst Logo" width="100" height="50" /></a>
+            <h1>Design Hosting</h1>
+        </div>
+    </header>
+    <main class="wrapper">
+    </main>
+    <footer>
+        <p>7th Floor, Ganga Phase III Campus, Technopark, Trivandrum - 695583</p>
+    </footer>
+</body>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
+
 </html>
