--- a/home.html
+++ b/home.html
@@ -19,7 +19,23 @@
     <main class="wrapper">
     </main>
     <footer>
-        <p>7th Floor, Ganga Phase III Campus, Technopark, Trivandrum - 695583</p>
+        <div class="wrapper">
+	        <div class="footer-left">
+	        	<div class="social-icons"></div>
+	        	<p>&copy; QBurst 2017. All Rights Reserved. Privacy & Cookies Policy</p>
+	        </div>
+	        <div class="footer-right">
+	        	<a href="/company/contact/#india" class="company-address">
+					7th Floor, Ganga<br>
+	 				Phase III Campus, Technopark 
+					<br> Trivandrum - 695583
+				</a>
+				<p class="contact">+91-471-653-7510</p>
+				<p class="location">
+					<a href="" class="all-locations">All locations</a>
+				</p>
+	        </div>
+        </div>
     </footer>
 </body>
 <script src="js/jquery.min.js"></script>
