Added social media icons in footer

--- a/home.html
+++ b/home.html
@@ -20,21 +20,28 @@
     </main>
     <footer>
         <div class="wrapper">
-	        <div class="footer-left">
-	        	<div class="social-icons"></div>
-	        	<p>&copy; QBurst 2017. All Rights Reserved. Privacy & Cookies Policy</p>
-	        </div>
-	        <div class="footer-right">
-	        	<a href="/company/contact/#india" class="company-address">
+            <div class="footer-right">
+                <a href="/company/contact/#india" class="company-address">
 					7th Floor, Ganga<br>
 	 				Phase III Campus, Technopark 
 					<br> Trivandrum - 695583
 				</a>
-				<p class="contact">+91-471-653-7510</p>
-				<p class="location">
-					<a href="" class="all-locations">All locations</a>
-				</p>
-	        </div>
+                <p class="contact">+91-471-653-7510</p>
+                <p class="location">
+                    <a href="" class="all-locations">All locations</a>
+                </p>
+            </div>
+            <div class="footer-left">
+                <div class="social-icons">
+                    <a target="_blank" href="http://www.linkedin.com/company/qburst" title="QBurst on LinkedIn" class="linked-in"></a>
+                    <a target="_blank" href="https://twitter.com/QBurst" title="QBurst on Twitter" class="twitter"></a>
+                    <a target="_blank" href="https://www.facebook.com/QBurst" title="QBurst on Facebook" class="fb"></a>
+                    <a target="_blank" href="http://slideshare.net/qburst" title="QBurst on SlideShare" class="slide-share"></a>
+                    <a target="_blank" href="http://www.youtube.com/user/QBurstVideos" title="QBurst on Youtube" class="youtube"></a>
+                    <a target="_blank" href="https://plus.google.com/+qburst" title="QBurst on Google+" class="google-plus"></a>
+                </div>
+                <p class="copyright">&copy; QBurst 2017. All Rights Reserved. Privacy & Cookies Policy</p>
+            </div>
         </div>
     </footer>
 </body>
