Renamed css and js files

--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/design.css">
 </head>
 
 <body>
@@ -17,6 +17,8 @@
         </div>
     </header>
     <main class="wrapper">
+        <div class="design-wrap">
+        </div>
     </main>
     <footer>
         <div class="wrapper">
@@ -47,6 +49,6 @@
 </body>
 <script src="js/jquery.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/design.js"></script>
 
 </html>
