Added images and json

--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
     <header>
         <div class="wrapper">
             <a href="http://www.qburst.com" target="_blank"><img src="images/qburst.png" alt="QBurst Logo" width="100" height="50"></a>
-            <h1>Design Hosting</h1>
+            <h1>Design</h1>
         </div>
     </header>
     <main class="wrapper">
