--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <title>Design Hosting App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/design.css">
 </head>
@@ -18,6 +19,9 @@
     <main class="wrapper">
         <div class="design-wrap">
             <h1>Design</h1>
+            <div class="design-section">
+                
+            </div>
         </div>
     </main>
     <footer>
@@ -48,6 +52,7 @@
     </footer>
 </body>
 <script src="js/jquery.min.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/design.js"></script>
 
