Added styles to footer using flex

--- a/home.html
+++ b/home.html
@@ -21,7 +21,7 @@
         </div>
     </main>
     <footer>
-        <div class="wrapper">
+        <div class="wrapper footer-wrapper">
             <div class="footer-right">
                 <a href="/company/contact/#india" class="company-address">
 					7th Floor, Ganga<br>
