--- a/home.html
+++ b/home.html
@@ -13,14 +13,13 @@
 <body>
     <header>
         <div class="wrapper">
-            <a href="http://www.qburst.com" target="_blank"><img src="images/qburst.png" alt="QBurst Logo" width="100" height="50"></a>
+            <a href="http://www.qburst.com" target="_blank"><img src="images/qburst.png" alt="QBurst Logo" title="QBurst Logo"></a>
         </div>
     </header>
-    <main class="wrapper">
+    <main class="wrapper main-wrapper">
         <div class="design-wrap">
             <h1>Design</h1>
             <div class="design-section">
-                
             </div>
         </div>
     </main>
