--- a/home.html
+++ b/home.html
@@ -5,8 +5,6 @@
     <title>Design Hosting App</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/design.css">
 </head>
 
@@ -27,13 +25,13 @@
         <div class="wrapper footer-wrapper">
             <div class="footer-right">
                 <a href="/company/contact/#india" class="company-address">
-					7th Floor, Ganga<br>
-	 				Phase III Campus, Technopark 
-					<br> Trivandrum - 695583
-				</a>
+                        7th Floor, Ganga<br>
+                        Phase III Campus, Technopark 
+                        <br> Trivandrum - 695583
+                    </a>
                 <p class="contact">+91-471-653-7510</p>
                 <p class="location">
-                    <a href="" class="all-locations">All locations</a>
+                    <a href="http://www.qburst.com/company/contact/" class="all-locations" target="_blank">All locations</a>
                 </p>
             </div>
             <div class="footer-left">
@@ -51,8 +49,6 @@
     </footer>
 </body>
 <script src="js/jquery.min.js"></script>
-<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-<script src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/design.js"></script>
 
 </html>
