--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Design Hosting App</title>
+    <title>Design Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/design.css">
@@ -16,7 +16,7 @@
     </header>
     <main class="wrapper main-wrapper">
         <div class="design-wrap">
-            <h1>Design</h1>
+            <h1>Design Portal</h1>
             <div class="design-section">
             </div>
         </div>
