--- a/design.html
+++ b/design.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Design Hosting App</title>
+    <title>Design Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/design.css">
